# py-hello-world-keatincf

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  pyproject.toml  release.sh  requirements.dep.txt
.github/: CODEOWNERS
.github/workflows/: build.yml  release-pypi.yml
py_hello_world_keatincf/: __init__.py  hello.py
py_hello_world_keatincf/operations/: __init__.py  sum.py
test/operations/: test_sum.py
