[tool.poetry]
name = "py-hello-world-keatincf"
version = "0.1.0"
description = "A Hello WOrld project to test out Github CI/CD"
authors = ["Charles Keating <Charles.Keating@udri.udayton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.2"
pre-commit = "^3.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
