[tool.poetry]
name = "py-hello-world-keatincf"
version = "1.4.1"
description = "A Hello World project to test out Github CI/CD"
authors = ["Charles Keating <Charles.Keating@udri.udayton.edu>"]
readme = "README.md"
repository = "https://github.com/keatincf/py-hello-world-keatincf"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.2"
pre-commit = "^3.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
